--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.13",
+    "@react-three/drei": "^9.121.2",
+    "@react-three/fiber": "^8.17.12",
+    "@sentry/nextjs": "^8.50.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "15.0.3",
+    "next": "14.2.21",
     "next-themes": "^0.4.4",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "^5.4.0",
+    "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.172.0",
+    "three-globe": "^2.41.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
